config/05-mysql-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: guacamole-db
  namespace: netboot-guacamole
  labels:
    app: guacamole
    tier: backend
spec:
  selector:
    matchLabels:
      app: guacamole
      tier: backend
  template:
    metadata:
      labels:
        app: guacamole
        tier: backend
    spec:
      containers:
      - image: mariadb
        name: guacamole-db
        ports:
        - name: guacamole-db
          containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: "/var/lib/mysql"
      volumes:
      - name: mysql-persistent-storage
        hostPath:
          path: /data/container/netboot-fr/guacamole/db
          type: Directory
