config/07-daemon-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-daemon
  namespace: netboot-guacamole
spec:
  selector:
    matchLabels:
      run: guacamole-daemon
  replicas: 1
  template:
    metadata:
      labels:
        run: guacamole-daemon
    spec:
      containers:
      - name: guacamole-daemon
        image:  guacamole/guacd
        ports:
        - containerPort: 4822
        readinessProbe:
          tcpSocket:
            port: 4822
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 4822
          initialDelaySeconds: 15
          periodSeconds: 20
