config/09-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guacamole-app
  namespace: netboot-guacamole
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: guacamole
        tier: frontend
    spec:
      containers:
      - name: guacamole-app
        image: guacamole/guacamole
        imagePullPolicy: Always
        ports:
        - name: guacamole-app
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
