config/12-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-db
  namespace: guacamole
  labels:
    app: guacamole
    tier: backend
spec:
  selector:
    matchLabels:
      app: guacamole
      tier: backend
  template:
    metadata:
      labels:
        app: guacamole
        tier: backend
    spec:
      containers:
        - image: mariadb:10.5.3
          imagePullPolicy: IfNotPresent
          name: guacamole-db
          ports:
            - name: guacamole-db
              containerPort: 3306
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 25
            periodSeconds: 25
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: "/var/lib/mysql"
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: sqldb-storage
