config/04-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-db
  namespace: netboot-guacamole
  labels:
    app: guacamole
    tier: backend
spec:
  ports:
    - name: guacamole-db
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: guacamole
    tier: backend
