config/06-guacd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-daemon
  namespace: guacamole
  labels:
    app: guacamole
    tier: backend
spec:
  ports:
    - name: guacamole-daemon
      port: 4822
      targetPort: 4822
      protocol: TCP
  selector:
    run: guacamole-daemon
