config/08-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-app
  namespace: netboot-guacamole
  labels:
    app: guacamole
    tier: frontend
spec:
  ports:
    - name: guacamole-app
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: guacamole
    tier: frontend
