config/10-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: netboot-guacamole
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/app-root: /guacamole
spec:
  tls:
  - hosts:
    - sc6rffd3d5.netboot.fr
    secretName: guacamole-netboot-fr-tls
  rules:
  - host: sc6rffd3d5.netboot.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: guacamole-app
          servicePort: 8080
