config/02-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: guacamole
  namespace: netboot-guacamole
spec:
  podSelector:
    matchLabels:
      app: guacamole
      tier: frontend
  ingress:
  -  from: []
